--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,10 +1,13 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <div class="col-md-8">
+            <div class="col-md-10">
                 <app-product></app-product>
             </div>
         </div>
+        <div class="col-md-2">
+            <app-cart></app-cart>
+        </div>
     </div>
-
 </div>
+
