--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,7 +3,8 @@
         Mobile Shopee
     </h2>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="btn btn-outline-danger  " routerLink="/homepage" >Home</a>
+        <a class="btn btn-outline-danger  " routerLink="/cart" >cart</a>&nbsp;
+        <a class="btn btn-outline-danger  " routerLink="/homepage" >Home</a>&nbsp;
         <a class="btn btn-outline-danger  " routerLink="/login-page" >Signup</a>
     </nav>
 </div>
