--- a/src/app/product/product-item/product-item.component.html
+++ b/src/app/product/product-item/product-item.component.html
@@ -1,6 +1,5 @@
 <div class="card mb-4 shadow-sm">
-    <img class="card-img-top p-2" width="50" height="350" [src]="productItem.imageurl"/>
-
+    <img class="card-img-top p-2 zoom" width="20" height="450" [src]="productItem.imageurl" />
     <div class="card-body">
         <p class="card-text ">
             <b>{{productItem.name }}</b>
@@ -9,17 +8,14 @@
         <p class="card-text">
             <b>{{productItem.price | currency:'INR'}}</b>
         </p>
- 
         <p class="card-text">
             {{productItem.description}}
         </p>
-
         <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-dark product-btn">Add to Cart</button>
+                <button type="button" class="btn btn-sm btn-dark product-btn" (click)="handleAddToCart()">
+                    Add to Cart</button>
             </div>
         </div>
-
     </div>
-
 </div>
