--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,13 +11,13 @@
                         <h5 class="text-uppercase text-white">Follow Us :</h5>
                         <ul class="list-unstyled">
                             <li>
-                                <a href="www.facebook.com" class="text-white">facebook</a>
+                                <a href="#" class="text-white">facebook</a>
                             </li>
                             <li>
-                                <a href="www.instagram.com" class="text-white">Instagram</a>
+                                <a href="#" class="text-white">Instagram</a>
                             </li>
                             <li>
-                                <a href="www.linkedin.com" class="text-white">LinkedIn</a>
+                                <a href="#" class="text-white">LinkedIn</a>
                             </li>
                         </ul>
                     </div>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <div class="footer-copyright text-center py-3">© 2020 Copyright
             </div>
         </footer>
     </div>
