--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,6 +5,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="btn btn-outline-danger  " routerLink="/cart" >cart</a>&nbsp;
         <a class="btn btn-outline-danger  " routerLink="/homepage" >Home</a>&nbsp;
-        <a class="btn btn-outline-danger  " routerLink="/login-page" >Signup</a>
+        <a class="btn btn-outline-danger  " routerLink="/login-page" >Signup</a>&nbsp;
+        <a class="btn btn-outline-danger  " routerLink="/adminlogin" >Admin</a>
     </nav>
 </div>
