--- a/src/app/product/product-item/product-item.component.css
+++ b/src/app/product/product-item/product-item.component.css
@@ -1,12 +1,13 @@
 .zoom {
     padding: 50px;
     
-    transition: transform .2s;
-  
+    transition: transform .2s; 
+    width: 200px;
+    height: 200px;
     margin: 0 auto;
   }
 
   
 .zoom:hover {
-  transform: scale(1.2); 
+  transform: scale(1.5); 
 }
